@@ -1,3 +1,9 @@
+2012-01-21  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
+
+	* matlab/FileFormatToolbox/scinrrd_load.m (v0.2.0):
+
+	- Add loading of .lsm files.
+
 2012-01-19  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
 	* matlab/FileFormatToolbox/dcm2metaimage.m (v0.1.1):
